# libchewing-data

./: CMakeLists.txt  Licesne.txt  README.md  Readme.txt  build_data.bat  libchewing-data.nsi  libchewinginfo.ini  phone.cin  pinyin.tab  readme.html  readme.md  tsi.src
.github/workflows/: ci.yml
big5/: ch_index.dat_src  fonetree.dat_src  ph_index.dat_src  phone.cin  phoneid.dic  tsi.src
dict/chewing/: CMakeLists.txt  alt.csv  mini.csv  mini.csv-metadata.json  tsi.csv-metadata.json  word.csv  word.csv-metadata.json
licesne/: licesne_English.txt
licesne/ansi/: licesne_chinese.txt
licesne/utf16le/: licesne_chinese.txt  licesne_english.txt
misc/: CMakeLists.txt
utf-8/: ch_index.dat_src  check.pl  checkphone.pl  fonetree.dat_src  ph_index.dat_src  phone.cin  phoneid.dic
